# PythonProject

./: app-FingerSpeak.py  app.py  detect.py  detect_practice.py  interface.py  main.py  practice.py  pyproject.toml
